--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,14 @@
 @online{arXiv.org,
   author = {Ahamed},
   title = {Studying the Feasibility and Importance of Software Testing: An Analysis},
-  year = {2010},
+  year = {2021},
   url = {https://arxiv.org/abs/1001.4193},
+  urldate = {2023-02-21}
+}
+@online{hansen,
+  author = {Hansen},
+  title = {Puppeteer on AWS Lambda},
+  year = {2010},
+  url = {https://oxylabs.io/blog/puppeteer-on-aws-lambda},
   urldate = {2023-02-21}
 }
